--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,227 @@
 html, body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+nav {
+  text-align: center;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 1rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #6867AC;
+}
+
+nav ul li a:hover {
+  color: #A267AC;
+  border-bottom: 2px solid #A267AC;
+}
+
+.banner {
+  background: url(../imagens/banner.jpeg) 27% center no-repeat;
+  min-height: 350px;
+  background-size: cover;
+  opacity: 0.9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.banner .inner-banner {
+  background-color: #FFBCD1;
+  padding: 3rem;
+  border-radius: 2rem;
+  opacity: 0.7;
+}
+
+.banner .inner-banner h1 {
+  font-size: 3rem;
+  color: #6867AC;
+}
+
+.banner .inner-banner h2 {
+  font-size: 1.5rem;
+  color: #A267AC;
+}
+
+#servicos {
+  margin: 80px;
+}
+
+#servicos h3 {
+  font-size: 1.2rem;
+  color: #A267AC;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: center;
+  margin: 1rem;
+}
+
+#servicos h4 {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 80px;
+  font-weight: 300;
+}
+
+#servicos .cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+#servicos .cards .card {
+  width: 360px;
+  text-align: center;
+}
+
+#servicos .cards .card h5 {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  color: #A267AC;
+}
+
+#servicos .cards .card p {
+  font-size: 1rem;
+  font-weight: 300;
+  color: #6867AC;
+  line-height: 1.25rem;
+}
+
+#servicos .cards .card .img-container {
+  padding-bottom: 2px;
+  border-bottom: 6px solid #A267AC;
+  opacity: 0.9;
+}
+
+#servicos .cards .card .img-container img {
+  max-width: 100%;
+}
+
+#cupom {
+  background-color: #FFBCD1;
+  padding: 4rem;
+  text-align: center;
+}
+
+#cupom .texto {
+  color: #6867AC;
+}
+
+#cupom .texto h2 {
+  margin: 2rem;
+  font-size: 1.76471rem;
+}
+
+#cupom .input {
+  margin: 0 auto;
+  width: 575px;
+  border-radius: 20px;
+  border: 4px solid white;
+  background: white;
+  -webkit-transition: 500ms all;
+  transition: 500ms all;
+}
+
+#cupom .input input {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 20px;
+  height: 40px;
+  border: none;
+  outline: none;
+  text-align: center;
+  font-size: 26px;
+}
+
+#cupom .input:hover, #cupom .input:focus-within {
+  -webkit-box-shadow: 1px 1px 8px 1px #6867AC;
+          box-shadow: 1px 1px 8px 1px #6867AC;
+  outline: none;
+}
+
+#cupom button {
+  text-transform: uppercase;
+  margin-top: .75rem;
+  outline: none;
+  height: 40px;
+  text-align: center;
+  width: 130px;
+  background-color: #6867AC;
+  color: #FFBCD1;
+  letter-spacing: 1px;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  border: 2px solid #6867AC;
+  border-radius: 40px;
+}
+
+#cupom button:hover {
+  background-color: #FFBCD1;
+  color: #6867AC;
+  border-color: #6867AC;
+}
+
+footer {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 300;
+  border-top: 2px solid #6867AC;
+  margin-top: 1rem;
+  padding: 1.2rem;
+  background: -webkit-gradient(linear, left top, right top, from(#6867AC), color-stop(#A267AC), color-stop(#FFBCD1), to(#FFBCD1));
+  background: linear-gradient(to right, #6867AC, #A267AC, #FFBCD1, #FFBCD1);
+}
+
+footer i {
+  color: red;
+}
+
+#bemestar {
+  margin: 80px;
+  text-align: center;
+}
+
+#bemestar .img-bemestar img {
+  max-width: 100%;
+}
+
+#bemestar .textos h3 {
+  font-size: 2.5rem;
+  color: #A267AC;
+  font-weight: 300;
+}
+
+#bemestar .textos h4 {
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: #6867AC;
+  margin-bottom: 1rem;
+}
+
+#bemestar .textos p {
+  font-weight: 300;
+  color: #6867AC;
+  letter-spacing: 2px;
+  line-height: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
