--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,7 @@
-html, body {
-    font-family: 'Roboto', sans-serif;
-}
+@import './abstract/base';
+@import './components/navbar';
+@import './components/banner';
+@import './components/servicos';
+@import './components/cupom';
+@import './components/_footer.sass';
+@import './components/_bemestar';
